<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.alver.fatefall</groupId>
    <artifactId>base</artifactId>
    <version>${revision}</version>

    <name>Fatefall</name>
    <packaging>pom</packaging>
    <modules>
        <!--    Back End Server/Client    -->
        <module>modules/fatefall-api</module>
        <module>modules/fatefall-api-server</module>
        <module>modules/fatefall-api-client</module>

        <!--    Front End Application    -->
        <module>modules/fatefall-app-javafx</module>

        <!--    Tools    -->
        <module>modules/plugin-system</module>
        <module>modules/scryfall-api-client</module>
        <module>modules/mse-interface</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0-SNAPSHOT</revision>
        <java.version>17</java.version>
        <junit.version>5.9.0</junit.version>
        <jackson.version>2.13.4</jackson.version>
        <aspectj.version>1.9.9.1</aspectj.version>
        <spring-boot-dependencies.version>2.7.3</spring-boot-dependencies.version>
        <slf4j.version>2.0.1</slf4j.version>
        <log4j.version>2.19.0</log4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alver</groupId>
            <artifactId>aspect-log</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>fatefall-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>fatefall-api-client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>fatefall-api-server</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>fatefall-app-javafx</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>plugin-system</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>mse-interface</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.alver.fatefall</groupId>
                <artifactId>scryfall-api-client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        -javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                        --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>